--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   http: ^0.13.6
   provider: ^6.0.5
   intl: ^0.18.0
+  
+  go_router: ^13.0.0
+
   shared_preferences: ^2.0.15
   socket_io_client: ^3.1.2
 
